save all analyses as CSV

--- a/client/partials/animations/AnimationInstantaneousSlide.html
+++ b/client/partials/animations/AnimationInstantaneousSlide.html
@@ -1,3 +1,6 @@
 <template name="AnimationInstantaneousSlide">
+  <h4>
+    <span class="btn btn-success download-as-csv"><i class="fa fa-table"></i>&nbsp;Download Convex Hull Data as .CSV</span>
+  </h4>
   <div id="AnimationInstantaneousSlide" class="m-t-30"></div>
 </template>
