--- a/client/partials/animations/animation.html
+++ b/client/partials/animations/animation.html
@@ -9,6 +9,9 @@
       {{#if equals ($.Session.get 'analysisType') 'convexHull'}}
         {{#if equals ($.Session.get 'instantContinuous') 'instantaneous'}}
           {{#if equals ($.Session.get 'slideStep') 'slide'}}
+            <h4>
+              <span class="btn btn-success download-hulls-as-csv"><i class="fa fa-table"></i>&nbsp;Download Animation Data as .CSV</span>
+            </h4>
             {{> AnimationInstantaneousSlide}}
           {{/if}}
         {{/if}}
