download viewing data as CSV

--- a/client/partials/plots/plotRegressionSelect.html
+++ b/client/partials/plots/plotRegressionSelect.html
@@ -6,9 +6,9 @@
     <option value="">Participant Mean Viewing Count</option>
     <option value="">Participant Average Viewing Count</option>
     <option value="">Participant Total Viewing Count</option>
-    <option value="">Participant Mean Average Convex Hull Size (Slide Method)</option>
-    <option value="">Participant Median Average Convex Hull Size (Slide Method)</option>
-    <option value="">Participant Mean Average Convex Hull Size (Step Method)</option>
-    <option value="">Participant Median Average Convex Hull Size (Step Method)</option>
+    <option value="">Participant Mean Average Convex Hull Area (Slide Method)</option>
+    <option value="">Participant Median Average Convex Hull Area (Slide Method)</option>
+    <option value="">Participant Mean Average Convex Hull Area (Step Method)</option>
+    <option value="">Participant Median Average Convex Hull Area (Step Method)</option>
   </select>
 </template>
