--- a/client/partials/animations/animation.html
+++ b/client/partials/animations/animation.html
@@ -10,23 +10,23 @@
       </h4>
       <div id="PlotArea" class="m-t-30"></div>
     </div>
-    <div class="m-l-50 m-t-20" style="width: {{progressSliderWidth}}px;">
-      <input type="range" class="form-control-range" id="formControlRange" value="{{progressPercent}}">
+    <div class="m-l-50 m-t-10" style="width: {{progressSliderWidth}}px;">
+      <input type="range" class="form-control-range slider-animation" id="slider-animation" value="{{progressPercent}}">
     </div>
-    <div class="m-t-20 m-l-50">
-      <button class="btn btn-primary">
+    <div class="m-t-10 m-l-50">
+      <button class="btn btn-primary beginning-animation">
         <i class="fa fa-fast-backward"></i>
       </button>
-      <button class="btn btn-primary">
+      <button class="btn btn-primary step-backward-animation">
         <i class="fa fa-step-backward"></i>
       </button>
       <button class="btn btn-primary {{#if playing}}pause-animation{{else}}play-animation{{/if}}">
         <i class="fa {{#if playing}}fa-pause{{else}}fa-play{{/if}}"></i>
       </button>
-      <button class="btn btn-primary">
+      <button class="btn btn-primary step-forward-animation">
         <i class="fa fa-step-forward"></i>
       </button>
-      <button class="btn btn-primary">
+      <button class="btn btn-primary end-animation">
         <i class="fa fa-fast-forward"></i>
       </button>
       <span>
@@ -34,10 +34,11 @@
         <span class="m-l-10 m-r-5">{{millisecondsToHMSMS currentTime}}</span>
         of
         <span class="m-l-5 m-r-10">{{millisecondsToHMSMS endTime}}</span>
+        <span class="m-l-10 m-r-10">[Convex Hull {{frameName}} of {{frameCount}}]</span>
         <span><strong>{{progressPercent}}%</strong></span>
       </span>
     </div>
-    <div>playing: {{json playing}}</div>
+    <!-- <div>playing: {{json playing}}</div>
     <div>framesTimes: {{json frameTimes}}</div>
     <div>frameIndex: {{json frameIndex}}</div>
     <div>frameCount: {{json frameCount}}</div>
@@ -45,7 +46,7 @@
     <div>startTime: {{millisecondsToHMSMS startTime}}</div>
     <div>currentTime: {{millisecondsToHMSMS currentTime}}</div>
     <div>endTime: {{millisecondsToHMSMS endTime}}</div>
-    <div>progress: {{formatNumber progressPercent}}%</div>
+    <div>progress: {{formatNumber progressPercent}}%</div> -->
     <!-- <div>hull area: {{formatNumber currentHull.area}}</div>
     <div>hull coverage: {{formatNumber currentHull.coveragePercent}}%</div> -->
   {{else}}
