download viewing data, not finished

--- a/client/partials/animations/animation.html
+++ b/client/partials/animations/animation.html
@@ -6,7 +6,7 @@
   {{#if stimulus.stimulusfile}}
     <div id="Animation" class="m-t-30">
       <h4>
-        <span class="btn btn-success download-data-as-csv"><i class="fa fa-table"></i>&nbsp;Download Animation Data as .CSV</span>
+        <span class="btn btn-success download-data-as-csv"><i class="fa fa-table"></i>&nbsp;Download Viewing Hulls as .CSV</span>
       </h4>
       <div id="PlotArea" class="m-t-30"></div>
     </div>
