remove test lines

--- a/client/partials/animations/animation.html
+++ b/client/partials/animations/animation.html
@@ -38,15 +38,15 @@
         <span><strong>{{progressPercent}}%</strong></span>
       </span>
     </div>
-    <div>playing: {{json playing}}</div>
-    <!-- <div>framesTimes: {{json frameTimes}}</div> -->
+    <!-- <div>playing: {{json playing}}</div>
+    <div>framesTimes: {{json frameTimes}}</div>
     <div>frameIndex: {{json frameIndex}}</div>
     <div>frameCount: {{json frameCount}}</div>
     <div>timeOffset: {{json timeOffset}}</div>
     <div>startTime: {{millisecondsToHMSMS startTime}}</div>
     <div>currentTime: {{millisecondsToHMSMS currentTime}}</div>
     <div>endTime: {{millisecondsToHMSMS endTime}}</div>
-    <div>progress: {{formatNumber progressPercent}}%</div>
+    <div>progress: {{formatNumber progressPercent}}%</div> -->
   {{else}}
     <div class="m-b-10">
       No stimulus image associated with <a href="/studies/{{stimulus.studyId}}/stimuli/{{stimulus._id}}">{{stimulus.name}}</a>
