--- a/client/partials/BreadCrumbs.html
+++ b/client/partials/BreadCrumbs.html
@@ -47,8 +47,7 @@
 
       {{#if isActiveRoute 'viewing'}}
         <li><a href="/studies/{{study._id}}/analyses">Analyses</a></li>
-        <li><a href="/studies/{{study._id}}/analyses/{{viewing.analysisId}}">{{viewing.analysis.name}}</a></li>
-        <li class="active">Viewing #{{viewing.number}}</li>
+        <li><a href="/studies/{{study._id}}/analyses/{{analysis._id}}">{{analysis.name}}</a></li>
       {{/if}}
     </ol>
   </div>
