--- a/client/styles.styl
+++ b/client/styles.styl
@@ -122,6 +122,10 @@ body
     margin-top 20px
 .m-t-30
     margin-top 30px
+.m-t-50
+    margin-top 50px
+.m-t-100
+    margin-top 100px
 .m-b-0
     margin-bottom 0
 .m-b-5
@@ -151,10 +155,15 @@ body
 .p-l-10
     padding-left 10px
 
-
+.p-b-5
+    padding-bottom 5px
 .p-b-10
     padding-bottom 10px
 
+.p-t-5
+    padding-top 5px
+.p-t-10
+    padding-top 10px
 
 
 .gi-1-3x
