working viewings navigator, refactoring animation to uses hullseries instead of plotData

--- a/client/partials/BreadCrumbs.html
+++ b/client/partials/BreadCrumbs.html
@@ -9,7 +9,7 @@
           {{#if isActiveRoute regex='study|datafiles|participants|stimuli|variables|analyses'}}
             <li class="active">{{study.name}}</li>
           {{else}}
-            <li><a href="/studies/{{study._id}}">{{study.name}}</a></li>
+            <li><a href="/studies/{{study._id}}/datafiles">{{study.name}}</a></li>
           {{/if}}
         {{/if}}
       {{/if}}
