working animations, need more tests

--- a/client/partials/animations/Animation.html
+++ b/client/partials/animations/Animation.html
@@ -34,6 +34,9 @@
       <span><strong>{{progressPercent}}%</strong></span>
     </span>
   </div>
+  <div class="m-t-20 m-l-50">
+    <strong>Coverage:</strong> {{coverage}}%
+  </div>
   <!-- <div>playing: {{json playing}}</div>
   <div>framesTimes: {{json frameTimes}}</div>
   <div>frameIndex: {{json frameIndex}}</div>
