--- a/client/partials/Navbar.html
+++ b/client/partials/Navbar.html
@@ -9,10 +9,10 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="/">VisualEyes</a>
+        <a class="navbar-brand" href="/">visual-eyes</a>
         <!-- <span class="github-logo"> -->
 
-        <a href="https://github.com/mattsears18/VisualEyes" target="_blank" class="navbar-brand">
+        <a href="https://github.com/mattsears18/visual-eyes" target="_blank" class="navbar-brand">
           <img src="/GitHub_Logo.png" class="github-logo">
         </a>
         <!-- </span> -->
