--- a/client/layouts/StudyLayout.html
+++ b/client/layouts/StudyLayout.html
@@ -1,7 +1,10 @@
 <head>
   <!-- Required meta tags -->
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta charset="utf-8" />
+  <meta
+    name="viewport"
+    content="width=device-width, initial-scale=1, shrink-to-fit=no"
+  />
 </head>
 
 <template name="StudyLayout">
@@ -10,81 +13,95 @@
 
   <div class="container main">
     {{#if Template.subscriptionsReady}}
-      {{#if $.Session.get 'updateStudy'}}
-        {{> UpdateStudy study=study}}
-      {{else}}
-        <h3 class="m-t-0">
-          {{study.name}}
+    {{#if $.Session.get 'updateStudy'}}
+    {{> UpdateStudy study=study}}
+    {{else}}
+    <h3 class="m-t-0">
+      {{ study.name }}
 
-          {{#if study.hasPermission 'update'}}
-            &nbsp;<a href="" class="update-study"><i class="fa fa-pencil"></i></a>
-          {{/if}}
-        </h3>
+      {{#if study.hasPermission 'update'}}
+      &nbsp;<a href="" class="update-study"><i class="fa fa-pencil"></i></a>
+      {{/if}}
+    </h3>
 
-        <p class="m-b-20">{{study.desc}}</p>
+    <p class="m-b-20">{{ study.desc }}</p>
 
-        <div class="m-b-20">
-          <ul class="nav nav-tabs">
-            <li class="{{#if isActivePath regex='datafiles'}} active {{/if}}">
-              <a href="/studies/{{study._id}}/datafiles">
-                <span class="{{#if datafiles.count}}{{#unless study.datafilesProcessingComplete}}text-danger{{/unless}}{{/if}}">
-                  <i class="fa fa-file"></i>&nbsp;&nbsp;Data Files {{#if datafiles.count}}({{datafiles.count}}){{/if}}
-                  {{#if datafiles.count}}{{#unless study.datafilesProcessingComplete}}<i class="fa fa-exclamation m-l-3"></i>{{/unless}}{{/if}}
-                </span>
-              </a>
-            </li>
-            {{#if participants.count}}
-              <li class="{{#if isActivePath regex='participants'}} active {{/if}}">
-                <a href="/studies/{{study._id}}/participants">
-                  <i class="fa fa-user"></i>&nbsp;&nbsp;Participants {{#if participants.count}}({{participants.count}}){{/if}}
-                </a>
-              </li>
-            {{/if}}
-            {{#if stimuli.count}}
-              <li class="{{#if isActivePath regex='stimuli'}} active {{/if}}">
-                <a href="/studies/{{study._id}}/stimuli">
-                  <span class="{{#if stimuli.count}}{{#unless study.stimuliAllHaveImage}}text-danger{{/unless}}{{/if}}">
-                    <i class="fa fa-image"></i>&nbsp;&nbsp;Stimuli {{#if stimuli.count}}({{stimuli.count}}){{/if}}
-                    {{#if stimuli.count}}{{#unless study.stimuliAllHaveImage}}<i class="fa fa-exclamation m-l-3"></i>{{/unless}}{{/if}}
-                  </span>
-                </a>
-              </li>
-            {{/if}}
-            {{#if participants.count}}
-              <li class="{{#if isActivePath regex='variables'}} active {{/if}}">
-                <a href="/studies/{{study._id}}/variables">
-                  <i class="fa fa-list"></i>&nbsp;&nbsp;Variables {{#if variables.count}}({{variables.count}}){{/if}}
-                </a>
-              </li>
-            {{/if}}
-            {{#if participants.count}}
-              {{#if stimuli.count}}
-                <li class="{{#if isActivePath regex='analyses'}} active {{/if}}">
-                  <a href="/studies/{{study._id}}/analyses">
-                    <span class="{{#if analyses.count}}{{#unless study.analysesProcessingComplete}}text-danger{{/unless}}{{/if}}">
-                      <i class="fa fa-area-chart"></i>&nbsp;&nbsp;Analyses {{#if analyses.count}}({{analyses.count}}){{/if}}
-                      {{#if analyses.count}}{{#unless study.analysesProcessingComplete}}<i class="fa fa-exclamation m-l-3"></i>{{/unless}}{{/if}}
-                    </span>
-                  </a>
-                </li>
-              {{/if}}
-            {{/if}}
-            {{#if analyses.count}}
+    <div class="m-b-20">
+      <ul class="nav nav-tabs">
+        <li class="{{#if isActivePath regex='datafiles'}} active {{/if}}">
+          <a href="/studies/{{ study._id }}/datafiles">
+            <span
+              class="{{#if datafiles.count}}{{#unless study.datafilesProcessingComplete}}text-danger{{/unless}}{{/if}}"
+            >
+              <i class="fa fa-file"></i>&nbsp;&nbsp;Data Files
+              {{#if datafiles.count}}({{ datafiles.count }}){{/if}}
+              {{#if datafiles.count}}{{#unless study.datafilesProcessingComplete
+              }}<i class="fa fa-exclamation m-l-3"></i>{{/unless}}{{/if}}
+            </span>
+          </a>
+        </li>
+        {{#if participants.count}}
+        <li class="{{#if isActivePath regex='participants'}} active {{/if}}">
+          <a href="/studies/{{ study._id }}/participants">
+            <i class="fa fa-user"></i>&nbsp;&nbsp;Participants
+            {{#if participants.count}}({{ participants.count }}){{/if}}
+          </a>
+        </li>
+        {{/if}}
+        {{#if stimuli.count}}
+        <li class="{{#if isActivePath regex='stimuli'}} active {{/if}}">
+          <a href="/studies/{{ study._id }}/stimuli">
+            <span
+              class="{{#if stimuli.count}}{{#unless study.stimuliAllHaveImage}}text-danger{{/unless}}{{/if}}"
+            >
+              <i class="fa fa-image"></i>&nbsp;&nbsp;Stimuli
+              {{#if stimuli.count}}({{ stimuli.count }}){{/if}}
+              {{#if stimuli.count}}{{#unless study.stimuliAllHaveImage
+              }}<i class="fa fa-exclamation m-l-3"></i>{{/unless}}{{/if}}
+            </span>
+          </a>
+        </li>
+        {{/if}}
+        {{#if participants.count}}
+        <li class="{{#if isActivePath regex='variables'}} active {{/if}}">
+          <a href="/studies/{{ study._id }}/variables">
+            <i class="fa fa-list"></i>&nbsp;&nbsp;Variables
+            {{#if variables.count}}({{ variables.count }}){{/if}}
+          </a>
+        </li>
+        {{/if}}
+        {{#if participants.count}}
+        {{#if stimuli.count}}
+        <li class="{{#if isActivePath regex='analyses'}} active {{/if}}">
+          <a href="/studies/{{ study._id }}/analyses">
+            <span
+              class="{{#if analyses.count}}{{#unless study.analysesProcessingComplete}}text-danger{{/unless}}{{/if}}"
+            >
+              <i class="fa fa-area-chart"></i>&nbsp;&nbsp;Analyses
+              {{#if analyses.count}}({{ analyses.count }}){{/if}}
+              {{#if analyses.count}}{{#unless study.analysesProcessingComplete
+              }}<i class="fa fa-exclamation m-l-3"></i>{{/unless}}{{/if}}
+            </span>
+          </a>
+        </li>
+        {{/if}}
+        {{/if}}
+        <!-- {{#if analyses.count}}
               <li class="{{#if isActivePath regex='export'}} active {{/if}}">
                 <a href="/studies/{{study._id}}/exports">
                   <i class="fa fa-share-square-o"></i>&nbsp;&nbsp;Export Data
                 </a>
               </li>
-            {{/if}}
-          </ul>
-        </div>
+            {{/if}} -->
+      </ul>
+    </div>
 
-        <main class="main-layout">
-          {{> Template.dynamic template=main}}
-        </main>
-      {{/if}}
+    <main class="main-layout">
+      {{> Template.dynamic template=main}}
+    </main>
+    {{/if}}
     {{else}}
-      {{> Spinner}}
+    {{> Spinner}}
     {{/if}}
   </div>
 
