--- a/client/partials/Navbar.html
+++ b/client/partials/Navbar.html
@@ -9,7 +9,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="/">visual-eyes</a>
+        <a class="navbar-brand" href="/">Visual Eyes</a>
         <!-- <span class="github-logo"> -->
 
         <a href="https://github.com/mattsears18/visual-eyes" target="_blank" class="navbar-brand">
