--- a/client/partials/plots/histograms/viewings/viewingCounts.html
+++ b/client/partials/plots/histograms/viewings/viewingCounts.html
@@ -1,6 +1,6 @@
-<template name="PlotHistogramViewingCounts">
+<template name="PlotHistogramGlanceCounts">
   <div class="well">
-    {{> Plot x=x layout=layout name="Histogram-Viewing-Counts"}}
+    {{> Plot x=x layout=layout name="Histogram-Glance-Counts"}}
     {{> HistogramStats x=x}}
   </div>
 </template>
