--- a/client/partials/BreadCrumbs.html
+++ b/client/partials/BreadCrumbs.html
@@ -45,7 +45,7 @@
         <li class="active">{{analysis.name}}</li>
       {{/if}}
 
-      {{#if isActiveRoute 'viewing'}}
+      {{#if isActiveRoute 'glance'}}
         <li><a href="/studies/{{study._id}}/analyses">Analyses</a></li>
         <li><a href="/studies/{{study._id}}/analyses/{{analysis._id}}">{{analysis.name}}</a></li>
       {{/if}}
