--- a/client/partials/plots/plotRegressionSelect.html
+++ b/client/partials/plots/plotRegressionSelect.html
@@ -1,11 +1,11 @@
 <template name="PlotRegressionSelect">
   <select class="form-control" name="{{name}}" id="{{name}}">
-    <option value="">Participant Mean Viewing Duration</option>
-    <option value="">Participant Median Viewing Duration</option>
-    <option value="">Participant Total Viewing Duration</option>
-    <option value="">Participant Mean Viewing Count</option>
-    <option value="">Participant Average Viewing Count</option>
-    <option value="">Participant Total Viewing Count</option>
+    <option value="">Participant Mean Glance Duration</option>
+    <option value="">Participant Median Glance Duration</option>
+    <option value="">Participant Total Glance Duration</option>
+    <option value="">Participant Mean Glance Count</option>
+    <option value="">Participant Average Glance Count</option>
+    <option value="">Participant Total Glance Count</option>
     <option value="">Participant Mean Average Convex Hull Coverage (Slide Method)</option>
     <option value="">Participant Median Average Convex Hull Coverage (Slide Method)</option>
     <option value="">Participant Mean Average Convex Hull Coverage (Step Method)</option>
