--- a/client/layouts/StudyLayout.html
+++ b/client/layouts/StudyLayout.html
@@ -14,15 +14,15 @@
   <div class="container main">
     {{#if Template.subscriptionsReady}}
     {{#if $.Session.get 'updateStudy'}}
-      {{> UpdateStudy study=study}}
+    {{> UpdateStudy study=study}}
     {{else}}
-      <h3 class="m-t-0">
-        {{ study.name }}
+    <h3 class="m-t-0">
+      {{ study.name }}
 
-        {{#if study.hasPermission 'update'}}
-          &nbsp;<a href="" class="update-study"><i class="fa fa-pencil"></i></a>
-        {{/if}}
-      </h3>
+      {{#if study.hasPermission 'update'}}
+      &nbsp;<a href="" class="update-study"><i class="fa fa-pencil"></i></a>
+      {{/if}}
+    </h3>
 
     <p class="m-b-20">{{ study.desc }}</p>
 
@@ -35,26 +35,27 @@
                 {{#if datafiles.count}}
                   {{#unless study.datafilesProcessingComplete}}text-danger{{/unless}}
                 {{/if}}
-              ">
+              "
+            >
               <i class="fa fa-file"></i>&nbsp;&nbsp;Data Files
               {{#if datafiles.count}}
-                ({{ datafiles.count }})
+              ({{ datafiles.count }})
               {{/if}}
               {{#if datafiles.count}}
-                {{#unless study.datafilesProcessingComplete}}
-                  <i class="fa fa-exclamation m-l-3"></i>
-                {{/unless}}
+              {{#unless study.datafilesProcessingComplete}}
+              <i class="fa fa-exclamation m-l-3"></i>
+              {{/unless}}
               {{/if}}
             </span>
           </a>
         </li>
         {{#if participants.count}}
-          <li class="{{#if isActivePath regex='participants'}} active {{/if}}">
-            <a href="/studies/{{ study._id }}/participants">
-              <i class="fa fa-user"></i>&nbsp;&nbsp;Participants
-              {{#if participants.count}}({{ participants.count }}){{/if}}
-            </a>
-          </li>
+        <li class="{{#if isActivePath regex='participants'}} active {{/if}}">
+          <a href="/studies/{{ study._id }}/participants">
+            <i class="fa fa-user"></i>&nbsp;&nbsp;Participants
+            {{#if participants.count}}({{ participants.count }}){{/if}}
+          </a>
+        </li>
         {{/if}}
         {{#if stimuli.count}}
         <li class="{{#if isActivePath regex='stimuli'}} active {{/if}}">
@@ -64,24 +65,24 @@
             >
               <i class="fa fa-image"></i>&nbsp;&nbsp;Stimuli
               {{#if stimuli.count}}
-                ({{ stimuli.count }})
+              ({{ stimuli.count }})
               {{/if}}
               {{#if stimuli.count}}
-                {{#unless study.stimuliAllHaveImage}}
-                  <i class="fa fa-exclamation m-l-3"></i>
-                {{/unless}}
+              {{#unless study.stimuliAllHaveImage}}
+              <i class="fa fa-exclamation m-l-3"></i>
+              {{/unless}}
               {{/if}}
             </span>
           </a>
         </li>
         {{/if}}
         {{#if participants.count}}
-          <li class="{{#if isActivePath regex='variables'}} active {{/if}}">
-            <a href="/studies/{{ study._id }}/variables">
-              <i class="fa fa-list"></i>&nbsp;&nbsp;Variables
-              {{#if variables.count}}({{ variables.count }}){{/if}}
-            </a>
-          </li>
+        <li class="{{#if isActivePath regex='variables'}} active {{/if}}">
+          <a href="/studies/{{ study._id }}/variables">
+            <i class="fa fa-list"></i>&nbsp;&nbsp;Variables
+            {{#if variables.count}}({{ variables.count }}){{/if}}
+          </a>
+        </li>
         {{/if}}
         {{#if participants.count}}
         {{#if stimuli.count}}
@@ -93,15 +94,14 @@
             >
               <i class="fa fa-area-chart"></i>&nbsp;&nbsp;Analyses
               {{#if analyses.count}}
-                ({{ analyses.count }} 
-                  {{#unless study.analysesProcessingComplete}}
-                    - {{formatNumber analysesProcessedPercent}}%
-                  {{/unless}})
+              ({{ analyses.count
+              }}{{#unless study.analysesProcessingComplete}} -
+              {{formatNumber analysesProcessedPercent}}% {{/unless}})
               {{/if}}
               {{#if analyses.count}}
-                {{#unless study.analysesProcessingComplete}}
-                  <i class="fa fa-exclamation m-l-3"></i>
-                {{/unless}}
+              {{#unless study.analysesProcessingComplete}}
+              <i class="fa fa-exclamation m-l-3"></i>
+              {{/unless}}
               {{/if}}
             </span>
           </a>
